<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Menu -->

    <string name="action_top_rated">Top Rated</string>
    <string name="action_popular">Popular</string>

    <!-- Movie List Item -->

    <string name="image_description">Movie posters</string>

    <!-- Main Activity -->

    <string name="error_no_internet">You are not connected to the internet :(</string>

    <!-- Detail Activity -->

    <string name="movie_title_label">Title:</string>
    <string name="movie_overview_label">Overview:</string>
    <string name="movie_average_vote_label">Average vote:</string>
    <string name="movie_release_date_label">Release date:</string>


</resources>
